@@ -1,3 +1,7 @@
+2014-10-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* gcc.target/aarch64/madd_after_asm_1.c: New test.
+
 2014-10-27  Guozhi Wei  <carrot@google.com>
 
 	PR tree-optimization/63530
