@@ -1,3 +1,8 @@
+2014-10-29  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* config/aarch64/aarch64.c (aarch64_madd_needs_nop): Restore
+	recog state after aarch64_prev_real_insn call.
+
 2014-10-27  Guozhi Wei  <carrot@google.com>
 
 	PR tree-optimization/63530
